Make it compatible with android minSdk 19 aka Kitkat.
use some methods for legacy Android devices. If used
with Android you still need the desugaring core enabled.